--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <title>Page Blocked</title>
 </head>
 <body>
-  
+    <font style="font-family: Arial;"></font>
    <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <center>
+    <center><input type="button" value="Reload Page" onClick="window.location.reload(true)">
     <button class="button">
         <span class="button-content">Re-Fresh</span>
-    </button>
+    </button></input>
     <h4 style="color: #fff;">This page is brought to you by PlingifyPlug and Team 1225 WebsiteBlocker</h4>
 </center>
   </div>
@@ -26,7 +26,7 @@
   <div id="main">
    
   </div>
-  <font style="font-family: Arial;">
+
 <center>
     <h2 style="color: #fff;">Page Blocked</h2>
     <h6>‎</h6>
@@ -34,8 +34,8 @@
     <h6>‎</h6>
     <h4 style="color: #fff;">This page is brought to you by PlingifyPlug and Team 1225 WebsiteBlocker</h4>
 
-    <h6>PlingfiyPlug©</h6>
-    <h6>Team 1225 WebsiteBlocker©</h6>
+    <h6 style="color: #fff;;">PlingfiyPlug©</h6>
+    <h6 style="color: #fff;">Team 1225 WebsiteBlocker©</h6>
 </center>
 </font>
 </body>
