--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <font style="font-family: Arial;"></font>
    <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <center><input type="button" value="Reload Page" onClick="window.location.reload(true)">
-    <button class="button">
+    <center>
+    <button class="button" onclick="window.location.reload();" onclick="window.location.href='/';" class="btn">
         <span class="button-content">Re-Fresh</span>
-    </button></input>
+    </button>
     <h4 style="color: #fff;">This page is brought to you by PlingifyPlug and Team 1225 WebsiteBlocker</h4>
 </center>
   </div>
