--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Page Blocked</title>
 </head>
 <body>
-    <font style="font-family: Arial;"></font>
+    <font style="font-family: Arial;">
    <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <center>
